small overflow fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,8 @@ body {
     font-family:  "Helvetica Neue",Helvetica,Arial;
     background-color: #008ada;
     color: white;
-    margin: 0;
+    margin: 0px;
+    overflow-x: hidden;
 }
 
 .head-div {
